--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -6,15 +6,19 @@ sites:
   - name: efece.ar
     url: https://www.efece.ar
     icon: https://efece.ar/wp-content/uploads/efece.ar_.icon_-150x150.jpg
+  - name: Veterinaria Colonia Animal
+    url: https://www.coloniaanimal.com
+    icon: https://www.coloniaanimal.com/wp-content/uploads/2023/08/Veterinary-5121-150x150.png
+  - name: Almacenata
+    url: https://www.almacenata.com.ar
+  - name: Granja Cooperativa La Tandilera
+    url: https://www.latandilera.com.ar
   - name: Sandra Luna
     url: https://www.sandraluna.com.ar
     icon: https://www.sandraluna.com.ar/wp-content/uploads/2021/04/apple-touch-icon-57x57-precomposed1.png
   - name: Huella Sagrada
     url: http://huellasagrada.com.ar  
-
-  - name: La Semilla Que Crece
-    url: https://www.lasemillaquecrece.com.ar
-    icon: https://www.lasemillaquecrece.com.ar/wp-content/uploads/2020/08/icono.jpg
+    icon: https://www.huellasagrada.com.ar/wp-content/uploads/logo-huellasagrada2-150x150.png
   - name: Maiá Noé
     url: https://www.maianoe.com.ar
   - name: Almacén BioPandora
@@ -24,8 +28,6 @@ sites:
     url: https://afip.dev    
   - name: UTT Nodo Morón
     url: https://www.uttnodomoron.com.ar
-  - name: Casa A
-    url: http://nodocasaa.com.ar
   - name: Tierra Firme
     url: https://www.tierrafirmenodoutt.com.ar
     icon: https://www.tierrafirmenodoutt.com.ar/wp-content/uploads/tierra-firme.png
@@ -33,15 +35,8 @@ sites:
     url: https://www.uttnodoramosmejia.com.ar
   - name: Vía Judicial
     url: https://www.viajudicial.com.ar
-  - name: Veterinaria Colonia Animal
-    url: https://www.coloniaanimal.com
-    icon: https://www.coloniaanimal.com/wp-content/uploads/2023/08/Veterinary-5121-150x150.png
   - name: Jorge Retamoza Web
     url: https://www.retamoza.com.ar
-  - name: Almacenata
-    url: https://www.almacenata.com.ar
-  - name: Granja Cooperativa La Tandilera
-    url: https://www.latandilera.com.ar
   - name: Nodo Monte Castro
     url: https://nodomontecastro.com.ar
 
@@ -137,7 +132,7 @@ i18n:
 
 workflowSchedule:
   uptime: "*/5 * * * *"
-  responseTime: "*/15 * * * *"
-  summary: "0 */1 * * *"
-  updateTemplate: "0 */2 * * *"
+  responseTime: "*/30 * * * *"
+  summary: "0 */8 * * *"
+  updateTemplate: "0 */8 * * *"
   updates: "0 3 * * *"
